--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="choices">
         <div id="Rock" class="choice"><img src="./images/rock.png" alt=""></div>
         <div id="Paper" class="choice"><img src="./images/paper.png" alt=""></div>
-        <div id="Scissors" class="choice"><img src="/images/scissors.png" alt=""></div>
+        <div id="Scissors" class="choice"><img src="/images/sci.png" alt=""></div>
     </div>
     <div class="score-board">
         <div class="score" style="background-color: rgba(240, 248, 255, 0);">
