Updated and Fixed all Bugs

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="body">
     <div class="head">
         <div><h1>Rock</h1></div>
         <div><h1 style="margin-left: 20px;">Paper</h1></div>
         <div><h1>Scissor</h1></div>
     </div>
     <div class="choices">
-        <div id="Rock" class="choice"><img src="./images/rock.png" alt=""></div>
+        <div id="Rock" class="choice"><img src="./images/rock.png" alt="" id=""></div>
         <div id="Paper" class="choice"><img src="./images/paper.png" alt=""></div>
-        <div id="Scissors" class="choice"><img src="/images/sci.png" alt=""></div>
+        <div id="Paper" class="choice"><img src="./images/scissors.png" alt="" class="sc" ></div>
     </div>
     <div class="score-board">
         <div class="score" style="background-color: rgba(240, 248, 255, 0);">
